--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,7 +48,10 @@ dependencies:
   json_serializable: ^6.3.1
   intl_utils: ^2.7.0
   shimmer: ^2.0.0
-  date_time_picker: ^2.1.0
+  retrofit_generator: ^4.0.3+1
+  flutter_secure_storage: ^5.1.0
+  hydrated_bloc: ^8.1.0
+  flutter_datetime_picker: ^1.5.1
 
 dev_dependencies:
   flutter_test:
@@ -73,7 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images
+    - assets/images/
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
