--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,13 +1,13 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '11.0'
+platform :ios, '11.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
-  'Debug' => :debug,
-  'Profile' => :release,
-  'Release' => :release,
+  'dev' => :debug,
+  'stagging' => :debug,
+  'prod' => :release,
 }
 
 def flutter_root
