--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,9 +49,10 @@ dependencies:
   intl_utils: ^2.7.0
   shimmer: ^2.0.0
   retrofit_generator: ^4.0.3+1
-  flutter_secure_storage: ^5.1.0
   hydrated_bloc: ^8.1.0
   flutter_datetime_picker: ^1.5.1
+  flutter_launcher_icons: ^0.11.0
+  logging: ^1.1.0
 
 dev_dependencies:
   flutter_test:
