--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,11 +53,13 @@ dependencies:
   flutter_datetime_picker: ^1.5.1
   flutter_launcher_icons: ^0.11.0
   logging: ^1.1.0
+  get_it: ^7.2.0
+  injectable: ^1.5.4
+  firebase_core: ^2.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -65,6 +67,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.2.0
+  injectable_generator: ^1.5.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
